package com.miss.artificial_city.dto;


public enum NodeType {
    ROAD,CONNECTOR,SPAWN,LIGHTS
}
