@startuml

title __DTO's Class Diagram__\n

  package com.miss.artificial_city {
    package com.miss.artificial_city.dto {
      class BoardDto {
          - boardName : String
          - nodeDtos : Set<NodeDto>
          - BoardDto()
          {static} + of()
          + BoardDto()
          + getBoardName()
          + getNodeDtos()
          + setBoardName()
          + setNodeDtos()
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.dto {
      class GetSavedBoardRequest {
          - name : String
          + GetSavedBoardRequest()
          + GetSavedBoardRequest()
          + getName()
          + setName()
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.dto {
      class GetSavedBoardResponse {
          - GetSavedBoardResponse()
          {static} + of()
          + GetSavedBoardResponse()
          + getBoardDto()
          + setBoardDto()
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.dto {
      enum NodeDirection {
        LEFT
        RIGHT
        UP
        DOWN
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.dto {
      class NodeDto {
          - leftId : String
          - rightId : String
          - topId : String
          - bottomId : String
          - spawnStreamId : String
          - maxSpeedAllowed : Double
          - verticalPosition : Double
          - horizontalPosition : Double
          - nodeId : String
          + NodeDto()
          {static} + builder()
          + NodeDto()
          + getNodeType()
          + getDirection()
          + getLeftId()
          + getRightId()
          + getTopId()
          + getBottomId()
          + getSpawnStreamId()
          + getMaxSpeedAllowed()
          + getVerticalPosition()
          + getHorizontalPosition()
          + getNodeId()
          + setNodeType()
          + setDirection()
          + setLeftId()
          + setRightId()
          + setTopId()
          + setBottomId()
          + setSpawnStreamId()
          + setMaxSpeedAllowed()
          + setVerticalPosition()
          + setHorizontalPosition()
          + setNodeId()
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.dto {
      class NodeDtoBuilder {
          - leftId : String
          - rightId : String
          - topId : String
          - bottomId : String
          - spawnStreamId : String
          - maxSpeedAllowed : Double
          - verticalPosition : Double
          - horizontalPosition : Double
          - nodeId : String
          ~ NodeDtoBuilder()
          + nodeType()
          + direction()
          + leftId()
          + rightId()
          + topId()
          + bottomId()
          + spawnStreamId()
          + maxSpeedAllowed()
          + verticalPosition()
          + horizontalPosition()
          + nodeId()
          + build()
          + toString()
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.dto {
      enum NodeType {
        ROAD
        CONNECTOR
        SPAWN
        LIGHTS
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.dto {
      class SaveBoardRequest {
          + SaveBoardRequest()
          + SaveBoardRequest()
          + getBoardDto()
          + setBoardDto()
      }
    }
  }
  

  GetSavedBoardResponse o-- BoardDto : boardDto
  NodeDto o-- NodeType : nodeType
  NodeDto o-- NodeDirection : direction
  NodeDto +-down- NodeDtoBuilder
  NodeDtoBuilder o-- NodeType : nodeType
  NodeDtoBuilder o-- NodeDirection : direction
  SaveBoardRequest o-- BoardDto : boardDto


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
